--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-scripts": "4.0.0",
     "react-scroll": "^1.8.2",
     "react-spring": "^8.0.27",
+    "react-use-gesture": "^9.1.3",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
