--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "react-dom": "^17.0.1",
     "react-icons": "^4.2.0",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.0",
+    "react-scripts": "^3.0.1",
     "react-scroll": "^1.8.2",
     "react-spring": "^8.0.27",
     "react-use-gesture": "^9.1.3",
